# holidaycalc

./: .dockerignore  .gitignore  Dockerfile  README.md  digital_cloud_config.yaml  docker-compose.yml  manage.py  pyproject.toml
calculator/: models.py
calculator/migrations/: 0001_initial.py
holidaycalc/: asgi.py  settings.py  urls.py  wsgi.py
quickstart/: serializers.py  views.py
src/backend/: app.py  handlers.py  urls.py
src/backend/entityies/: calcuate_costs.py
src/backend/services/: calculate_costs.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  index.js
src/frontend/src/components/: PartyConfiguration.js
src/holidaycalc/: __init__.py  app.py  cli.py  handlers.py
src/holidaycalc/entityies/: calcuate_costs.py
src/holidaycalc/frontend/: package.json
src/holidaycalc/frontend/public/: index.html  manifest.json
src/holidaycalc/frontend/src/: App.js  index.css  index.js  store.js
src/holidaycalc/helpers/: http.py
src/holidaycalc/services/: calculate_costs.py
src/holidaycalc/static/: asset-manifest.json  index.html
src/holidaycalc/static/css/: main.60126562.chunk.css  main.60126562.chunk.css.map  main.7bb5a8b7.chunk.css  main.7bb5a8b7.chunk.css.map
src/holidaycalc/static/js/: 2.ad40ade3.chunk.js  2.ad40ade3.chunk.js.map  2.b30e5588.chunk.js  2.b30e5588.chunk.js.map  2.b3d6b361.chunk.js  2.b3d6b361.chunk.js.map  2.b674fc0f.chunk.js  2.b674fc0f.chunk.js.map  2.df39db1a.chunk.js  2.df39db1a.chunk.js.map  (+20 more)
src/tests/: test_calculate_costs.py
tests/: test_calculate_costs.py
(+7 files in other folders)
