[tool.poetry]
name = "holidaycalc"
version = "0.1.0"
authors = ["nuclearthinking <onifent@gmail.com>"]
description = "Django app to solve money bookkeping problem after holidays/parties"
readme = "README.md"

[tool.poetry.scripts]
holidaycalc = "backend.app:cli"


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
psycopg2-binary = "^2.9.1"
tornado = "^6.1"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.23"
asyncpgsa = "^0.27.1"
marshmallow-dataclass = "^8.5.3"
marshmallow = "^3.13.0"